tests/good/types.c
int main()
{
    int i = 1;
    int* pi = &i;

    float f = 2.5f;
    float* pf = &f;

    char c = 'c';
    char* pc = &c;
}
