tests/bad/char-to-int.c
int main()
{
    int c = "n";
}
